# odp-patent-mcp

./: CLAUDE.md  data_dictionary.txt  odp_client.py  pyproject.toml
json/: app_14412875_metadata.json
src/odp_patent_mcp/: __main__.py  config.py  dictionary.py  resources.py  server.py
src/odp_patent_mcp/uspto/: api_uspto_gov.py
src/odp_patent_mcp/util/: response.py
src/patent_mcp_server/: patents.py  resources.py
test/unit/: test_api_client.py  test_errors.py  test_odp_search.py  test_response_util.py  test_validation.py
