[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "odp-patent-mcp"
version = "1.0.0"
description = "Model Context Protocol server for USPTO Open Data Portal patent data"
readme = "README.md"
requires-python = ">=3.10,<3.14"
license = "MIT"
authors = [
    {name = "riemannzeta", email = "noreply@github.com"}
]
keywords = ["mcp", "model-context-protocol", "uspto", "patent", "patent-search", "api"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Legal Industry",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Information Analysis",
]

dependencies = [
    "h2>=4.2.0",
    "httpx>=0.28.1",
    "mcp[cli]>=1.3.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.2.2",      # CVE-2026-28684 fix
    "python-multipart>=0.0.27",  # CVE-2026-24486, CVE-2026-40347, CVE-2026-42561 fix
    "tenacity>=8.0.0",
]

[project.urls]
Homepage = "https://github.com/pierrearbajian/odp-patent-mcp"
Repository = "https://github.com/pierrearbajian/odp-patent-mcp"
Issues = "https://github.com/pierrearbajian/odp-patent-mcp/issues"

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",          # CVE-2025-71176 fix
    "pytest-asyncio>=1.0.0",
    "pytest-cov>=4.0.0",
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["odp_patent_mcp", "odp_patent_mcp.util"]

[tool.setuptools.package-data]
odp_patent_mcp = ["json/*.json"]

[dependency-groups]
dev = [
    "build>=1.3.0",
    "jaraco-context>=6.1.0", # CVE-2026-23949 fix
    "pip-audit>=2.10.0",
    "pytest>=9.0.3",          # CVE-2025-71176 fix
    "pytest-asyncio>=1.0.0",
    "pytest-cov>=7.0.0",
    "twine>=6.2.0",
    "urllib3>=2.7.0", # Dependabot #18 (decompression-bomb), #19 (cross-origin header leak) fix
]

[project.scripts]
odp-patent-mcp = "odp_patent_mcp.server:main"
